# dcc-at-rule-sets

./: .gitignore  NEWS.md  README.md  build.py  fmt.py  import.py  index.html  index.tmpl  make.py  pyproject.toml  tugraz.json
.github/workflows/: main.yml
PHST/: GR-PHST-0001.json  README.md  RR-PHST-0000.json  TR-PHST-0000.json  TR-PHST-0001.json  TR-PHST-0005.json  TR-PHST-0007.json  VR-PHST-0001.json  VR-PHST-0007-booster.json  VR-PHST-0008.json
PLUS/: GR-PLUS-0000.json  GR-PLUS-0001.json  README.md  RR-PLUS-0000.json  TR-PLUS-0002.json  TR-PLUS-0007.json  VR-PLUS-0007-booster.json
TUGRAZ/: GR-TUGRAZ-0001.json  README.md  RR-TUGRAZ-0001.json  TR-TUGRAZ-0007.json  VR-TUGRAZ-0007-booster.json  VR-TUGRAZ-0007.json  VR-TUGRAZ-0008.json
TUGRAZ/ET-LV/: TUGRAZ-ET-LV-GR-0000.json  TUGRAZ-ET-LV-GR-0001.json  TUGRAZ-ET-LV-TR-0001.json  TUGRAZ-ET-LV-TR-0004.json  (+1 more)
sets/: AT-PROD.json  AT-TEST.json  PHST.json  PLUS.json  TUGRAZ.json
tugraz/: GR-AT-0000.json  GR-AT-0001.json  GR-TUGRAZ-0000.json  GR-TUGRAZ-0001.json  README.md  RR-AT-0000.json  RR-AT-0001.json  RR-AT-0002.json  RR-TUGRAZ-0000.json  RR-TUGRAZ-0001.json  RR-TUGRAZ-0002.json  TR-AT-0000.json  TR-AT-0001.json  TR-AT-0002.json  TR-AT-0004.json  TR-AT-0005.json  TR-AT-0006.json  TR-TUGRAZ-0000.json  TR-TUGRAZ-0001.json  TR-TUGRAZ-0002.json  TR-TUGRAZ-0004.json  TR-TUGRAZ-0005.json  TR-TUGRAZ-0006.json  VR-AT-0000.json  VR-AT-0001.json  VR-AT-0007.json  VR-AT-0008.json  VR-AT-0009.json  VR-TUGRAZ-0000.json  VR-TUGRAZ-0001.json  VR-TUGRAZ-0007.json  VR-TUGRAZ-0008.json  VR-TUGRAZ-0009.json
(+69 files in other folders)
